--- a/src/problems/mhd_blast.in
+++ b/src/problems/mhd_blast.in
@@ -32,32 +32,35 @@ nx3 = 1
 
 <parthenon/time>
 nlim = 10000
-tlim = 0.05
+tlim = 0.2
 integrator = rk2
 ncycle_out_mesh = -10000
 
 
 <parthenon/output0>
 file_type = rst
-dt = 0.01
+dt = 0.05
 dn = -1
 
 <eos>
 mode_init = dens_pres
+
+<eos/gamma>
+gamma = 1.66666667
 
 <physics>
 MHD = ct
 
 <hydro>
 cfl = 0.8
-reconstruction = wenoz
-riemann = hllc
-slope_limiter = minmod
+reconstruction = ppm
+riemann = hll
+slope_limiter = mc
 
 <mhd_blast>
 density = 1.0
 pressure = 1.0e-1
-explostion_pressure = 1000.
-magx = 50.0
+explosion_pressure = 10.
+magx = 1.0
 radius = 0.1
 
