--- a/src/problems/mhd_blast.in
+++ b/src/problems/mhd_blast.in
@@ -31,7 +31,7 @@ nx2 = 32
 nx3 = 1
 
 <parthenon/time>
-nlim = 10000
+nlim = 11000
 tlim = 0.2
 integrator = rk2
 ncycle_out_mesh = -10000
@@ -54,7 +54,7 @@ MHD = ct
 <hydro>
 cfl = 0.8
 reconstruction = wenoz
-riemann = hll
+riemann = hllc
 slope_limiter = mc
 
 <mhd_blast>
